# wordstat_lesta

./: .env_EXAMPLE  .gitignore  Makefile  README.md  alembic.ini  pyproject.toml  setup.cfg
lestagames/: app.py  utils.py
lestagames/static/style/: style.css
lestagames/templates/: main_layout.html
lestagames/translations/ru/LC_MESSAGES/: messages.mo
word_stat/: __init__.py  app.py  models.py  utils.py
word_stat/migrations/: env.py
word_stat/migrations/versions/: 1f002608df8e_add_count.py  c0568901fd35_.py  ef18a677c321_.py
word_stat/static/style/: style.css
word_stat/templates/: main_layout.html  pagination.html
word_stat/templates/page/: collection_info.html  collections_list.html  home_page.html
word_stat/translations/ru/LC_MESSAGES/: messages.mo  messages.po
