[tool.poetry]
name = "lestagames"
version = "0.1.0"
description = ""
authors = ["OlegKhiretdinov <oleg@oleg.win>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
flask-babel = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
