[tool.poetry]
name = "word_stat"
version = "0.1.0"
description = ""
authors = ["OlegKhiretdinov <oleg@oleg.win>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
flask-babel = "^4.0.0"
nltk = "^3.8.1"
sqlalchemy = "^2.0.29"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.9"
alembic = "^1.13.1"
gunicorn = "^22.0.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
